--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,6 @@ dependencies {
     annotationProcessor "androidx.room:room-compiler:2.0.0"
     implementation "com.squareup.picasso:picasso:2.5.2"
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
+    implementation "androidx.preference:preference:1.1.0-alpha02"
 }
